crates/cypher-sema/src/snapshots/cypher_sema__resolve__tests__scope_func_unresolved_arg.snap
---
source: crates/cypher-sema/src/resolve.rs
expression: "render_src(\"RETURN count(missing)\")"
---
scopes: 2
  scope[0] kind=Root parent=None bindings=[]
  scope[1] kind=Return parent=Some(0) bindings=[]
diagnostics: 0
