crates/cypher-sema/src/snapshots/cypher_sema__resolve__tests__scope_rel_pattern.snap
---
source: crates/cypher-sema/src/resolve.rs
expression: "render_src(\"MATCH (a)-[r:KNOWS]->(b) RETURN a, r, b\")"
---
scopes: 3
  scope[0] kind=Root parent=None bindings=[]
  scope[1] kind=Match parent=Some(0) bindings=["a", "b", "r"]
  scope[2] kind=Return parent=Some(1) bindings=[]
diagnostics: 0
