crates/cypher-sema/src/snapshots/cypher_sema__resolve__tests__scope_return_terminal.snap
---
source: crates/cypher-sema/src/resolve.rs
expression: "render_src(\"MATCH (n:Person) RETURN n.name\")"
---
scopes: 3
  scope[0] kind=Root parent=None bindings=[]
  scope[1] kind=Match parent=Some(0) bindings=["n"]
  scope[2] kind=Return parent=Some(1) bindings=[]
diagnostics: 0
